@@ -13,6 +13,7 @@ WinMerge 2.13.9
   Add accelerator keys for Shell context menu (#2823536)
   Add /xq command line switch for closing WinMerge after identical files
     and not showing message (#2827836)
+  Add missing keywords to Pascal highlighter (#2834192)
   Bugfix: Did not export changed options values (#2799149)
   Bugfix: Don't highlight identical words if whitespaces are ignored (#2798360)
   Bugfix: Did not reset folder compare method back to original (#2803152)
